// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons Favorite Card Button Should be disabled/enabled if active state is true/false 1`] = `
<button
  className="favorite-card-btn"
  name="favorite-card"
  onClick={[Function]}
  title="Add to Favorites"
  type="button"
>
  <img
    alt="card background"
    src="empire.png"
  />
  <img
    alt="card background"
    src={
      Object {
        "ReactComponent": Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "__esModule": true,
        "default": "inactive-star.svg",
      }
    }
  />
  <img
    alt="card background"
    src="rebel-alliance.png"
  />
</button>
`;

exports[`Buttons Favorite Card Button Should be disabled/enabled if active state is true/false 2`] = `
<button
  className="active-fav favorite-card-btn"
  name="favorite-card"
  onClick={[MockFunction]}
  title="Add to Favorites"
  type="button"
>
  <img
    alt="card background"
    src="empire.png"
  />
  <img
    alt="card background"
    src={
      Object {
        "ReactComponent": Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "__esModule": true,
        "default": "active-star.svg",
      }
    }
  />
  <img
    alt="card background"
    src="rebel-alliance.png"
  />
</button>
`;

exports[`Buttons ViewFavorites Button: Should be disabled with favorite count set to 0 1`] = `
<button
  className="active view-fav-btn"
  disabled={true}
  name="favorites"
  onClick={[MockFunction]}
  type="button"
>
  No favorites
</button>
`;

exports[`Buttons ViewFavorites Button: Should match snapshot taken 1`] = `
<button
  className="active view-fav-btn"
  disabled={false}
  name="favorites"
  onClick={[MockFunction]}
  type="button"
>
  Favorites
  <span
    className="fav-total"
    id="favorites"
  >
    1
  </span>
</button>
`;
